Fixed issue with content overflowing out of border box

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -162,12 +162,13 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .main-right {
-  width: 55vw;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border: 3px solid #68b4b5;
+  height: fit-content;
 }
 
 .mtns {
